Change secondary button color and fix whitespace from showing below the footer. Fix extra whitespace from showing when hovering Why Attend button

--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -32,7 +32,7 @@
 
 .btn-rounded.secondary {
 	border: 2px solid #FF6E42;
-	background: #FFF;
+	background: transparent;
 	color: #FF6E42;
 	transition: .2s ease all;
 }
