--- a/src/assets/scss/layout/_banner.scss
+++ b/src/assets/scss/layout/_banner.scss
@@ -28,14 +28,8 @@
 		background-size: cover;
 		border-bottom: 0 !important;
 		cursor: default;
-		// height: 80vh;
-		// margin-bottom: -3.25em;
-		margin-bottom: -6.25em;
-		// max-height: 75em;
-		// min-height: 22em;
+		// margin-bottom: -6.25em;
 		position: relative;
-		top: -3.25em;
-		margin-top: 5em;
 		z-index: 10;
 
 		.inner
