--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -24,6 +24,13 @@
 	src: url('../fonts/Futura-Medium.otf') format("opentype");
 }
 */
+
+html, body {
+	height: 100%;
+}
+body {
+	min-height: 100%;
+}
 	@include skel-breakpoints((
 		xlarge: '(max-width: 1680px)',
 		large: '(max-width: 1280px)',
